⚗️ try of the new YAML parser